--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="about_container">
                     
                 <div class="about_image">
-                    <img src="img/Dp.jpg" alt="">
+                    <img src="img/pp.jpg" alt="">
                 </div>
 
                 <div class="about_content">
