--- a/index.html
+++ b/index.html
@@ -8,7 +8,6 @@
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
 
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
      <!-- custom css -->
      <link rel="stylesheet" href="style.css">
 
@@ -35,7 +34,8 @@
         </header>
 
         <section class="home" id="home">
-            <div class="home-content">   
+            <div class="home-content">
+                <p><br><br><br></p>   
                 <h3>Hello, It's Me</h3>
                 <h1>ARIJUL ISLAM</h1>
                 <h3>And I'm a <span>Full stack web Developer</span></h3>
@@ -57,7 +57,7 @@
         </section>
 
 
-        <section class="about" id="About">
+        <section class="About" id="About">
             
             <div class="headings">
                 <span><h2>About Me</h2></span>
