--- a/index.html
+++ b/index.html
@@ -63,13 +63,13 @@
                 <span><h2>About Me</h2></span>
             </div>
 
-            <div class="about_container">
+            <div class="About_container">
                     
-                <div class="about_image">
+                <div class="About_image">
                     <img src="img/pp.jpg" alt="">
                 </div>
 
-                <div class="about_content">
+                <div class="About_content">
                     <h3>Hi, I'm Arijul Islam , a Full Stack Web Developer </h3>
                     <p>I live in deganga near barasat.I studing Computer engineering at Calcutta Institute of 
                         Technology . In my spare time i enjoy reading. My strength lies in problem solving. I want 
@@ -176,11 +176,12 @@
 
         <div id="popup">
             <span><h1>EpochEdge</h1></span>
-            <p>I have done the project which name is EpochEdge. As a Frontend developer i working on it.
-                 EpochEdge is a website and the most interesting part of our website is face recognition api.
-                  An event organizer can upload all the session images in this website and any attendee can download
-                   all session images or he can only download his own images through face scan. We are still working
-                    on it to add extra features.</p>
+            <p>Suppose you attend an event and click photos in camera of a friend or photographer.
+                That friend or photographer will upload all photos to "Upload your image" section of EpochEdge website.
+                 You just need to open the EpochEdge website and go to "Get all session image" section to download all images or
+                  "Get your image" section to download only those images you are present.</p>
+           <p><span>Important Note:</span> Photographer will upload the photos with a specific username called <span>Session
+                username</span> and you must know that username to collect the images.</p>
             <a href="#popup" class="btn1" onclick="toggle()">close</a>
         </div>
 
