--- a/index.html
+++ b/index.html
@@ -179,11 +179,16 @@
         <div id="popup">
             <span><h1>EpochEdge</h1></span>
             <p>Suppose you attend an event and click photos in camera of a friend or photographer.
-                That friend or photographer will upload all photos to "Upload your image" section of EpochEdge website.
-                 You just need to open the EpochEdge website and go to "Get all session image" section to download all images or
-                  "Get your image" section to download only those images you are present.</p>
-           <p><span>Important Note:</span> Photographer will upload the photos with a specific username called <span>Session
-                username</span> and you must know that username to collect the images.</p>
+                That friend or photographer will upload all photos to "Upload your images" section of EpochEdge website.
+                You just need to open the EpochEdge website and go to "Get all session images" section to download all images or
+                "Get your images" section to download only those images you are present.
+            </p>
+            <p><span>Important Note:</span> Photographer will upload the photos with a specific username called <span>Session
+                username</span> and you must know that username to collect the images.
+            </p>
+            <br>
+            <a href="https://github.com/Arijul007/EpochEdge" class="styled-link"><i class='bx bx-link'></i></a>
+            <br><br>
             <a href="#popup" class="btn1" onclick="toggle()">close</a>
         </div>
 
