--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="social-media">
                     <a href="https://github.com/Arijul007"><i class='bx bxl-github' ></i></a>
                     <a href="https://www.linkedin.com/in/arijulislam/"><i class='bx bxl-linkedin' ></i></a>
-                    <a href="#"><i class='bx bxl-twitter' ></i></a>
+                    <a href="https://x.com/arijul008"><i class='bx bxl-twitter' ></i></a>
                 </div>
                 <a href="#" class="btn">Download CV</a>
             </div>
